package edu.sandiego.comp305;

import java.util.List;

public class CSVLoader {

    private final String filePath;

    public CSVLoader(final String filePath) {
        this.filePath = filePath;
    }

    public List<Team> loadTeams() {
        return null;
    }
}

