package edu.sandiego.comp305;

public class EloStrategy implements PredictionStrategy {
    public double getProbability(Team homeTeam, Team awayTeam) {
        return 0.0;
    };
}
