package edu.sandiego.comp305;

public interface PredictionStrategy {
    getProbability(Team homeTeam, Team awayTeam) {
        return 0.0;
    } 
}
